# skrat

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  config.local.mk.example
.cursor/: sandbox.json
.github/workflows/: ci.yml
docs/: DD.md  HLA.md  README.md  RTM.md  SRS.md  TEST_PLAN.md
docs/api/html/: MainWindow_8cpp.html  MainWindow_8cpp.js  MainWindow_8cpp_source.html  MainWindow_8h.html  MainWindow_8h_source.html  PdfGraphicsView_8cpp.html  PdfGraphicsView_8cpp_source.html  PdfGraphicsView_8h.html  PdfGraphicsView_8h.js  PdfGraphicsView_8h_source.html  README_8md.html  UiTheme_8cpp.html  UiTheme_8cpp.js  UiTheme_8cpp_source.html  UiTheme_8h.html  UiTheme_8h.js  UiTheme_8h_source.html  annotated.html  annotated_dup.js  classMainWindow-members.html  classMainWindow.html  classMainWindow.js  classPdfGraphicsView-members.html  classPdfGraphicsView.html  classPdfGraphicsView.js  classes.html  classskrat_1_1PdfDocumentRibbon-members.html  classskrat_1_1PdfDocumentRibbon.html  classskrat_1_1PdfDocumentRibbon.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  doxygen_crawl.html  files.html  functions.html  functions_d.html  functions_dup.js  functions_e.html  functions_enum.html  functions_f.html  functions_func.html  (+38 more)
docs/api/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_1.js  classes_2.js  enums_0.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_2.js  functions_4.js  functions_7.js  functions_9.js  (+30 more)
docs/api/xml/: Doxyfile.xml  MainWindow_8cpp.xml  MainWindow_8h.xml  PdfGraphicsView_8cpp.xml  PdfGraphicsView_8h.xml  README_8md.xml  UiTheme_8cpp.xml  UiTheme_8h.xml  classMainWindow.xml  classPdfGraphicsView.xml  classskrat_1_1PdfDocumentRibbon.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  index.xml  indexpage.xml  main_8cpp.xml  namespace_0d321272225226023043242054312073113033207202221357.xml  namespaceskrat.xml  namespaceskrat_1_1_0d246242171213106255010302070133305231342164066305.xml  structPdfGraphicsView_1_1PageItem.xml  structskrat_1_1UiThemePrefs.xml
packaging/: linux-deploy-portable.sh  macos-ci-signing.md  skrat.desktop
packaging/icons/: export-pngs.sh
packaging/macos/: Notarization.entitlements  build-icns.sh  install-bundle-icon.sh  skrat.icns
releases/: README.md
src/: MainWindow.cpp  MainWindow.h  PdfGraphicsView.cpp  PdfGraphicsView.h  UiTheme.cpp  UiTheme.h  main.cpp
